--- a/back/authentication/build.gradle
+++ b/back/authentication/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok:1.18.30'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.keycloak:keycloak-admin-client:23.0.6'
+	implementation 'org.keycloak:keycloak-admin-client:22.0.4'
 	implementation 'org.springframework.security:spring-security-config:6.0.8'
 	implementation 'org.keycloak:keycloak-policy-enforcer:23.0.1'
 	implementation 'org.keycloak:keycloak-core:18.0.12'
@@ -28,6 +28,10 @@ dependencies {
 	implementation "org.keycloak:keycloak-policy-enforcer:23.0.1"
 	implementation "org.keycloak:keycloak-core:23.0.7"
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+	implementation 'org.jboss.resteasy:resteasy-client:6.2.5.Final'
+	implementation 'org.jboss.resteasy:resteasy-jackson2-provider:6.2.5.Final'
+
+
 
 
 
