--- a/back/authentication/src/main/resources/application.yml
+++ b/back/authentication/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
     oauth2:
       resourceserver:
         jwt:
-          issuer-uri: http://localhost:8080/admin/realms/AuthB2
+          issuer-uri: http://localhost:8080/realms/AuthB2
 jwt:
   auth:
     converter:
