--- a/back/authentication/src/main/resources/application.yml
+++ b/back/authentication/src/main/resources/application.yml
@@ -1,20 +1,22 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:test_db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    url: jdbc:postgresql://service-db:5432/users
     # url: jdbc:mysql://localhost:3306/user_db
-    username: root
-    password: root
+    username: postgres
+    password: postgres
+    driverClassName: org.postgresql.Driver
   tomcat:
     max-wait: 20000
     max-active: 50
     max-idle: 20
     min-idle: 15
   jpa:
+    show-sql: true
     hibernate:
       ddl-auto: create-drop
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.H2Dialect
+        dialect: org.hibernate.dialect.PostgreSQLDialect
         # dialect: org.hibernate.dialect.MySQL8Dialect
         format_sql: true
         id:
