--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,11 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.hibernate.ddl-auto=update
 server.port=8088
 
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.display-request-duration=true
+springdoc.swagger-ui.display-operations-filter=true
+springdoc.swagger-ui.doc-expansion=none
+springdoc.packagesToScan=com.poly.feedback
+springdoc.pathsToMatch=/api/**
